导致OOM参数设置添加